--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <button id="add-btn">Submit</button>
     </form>
 
+    <a href="https://github.com/AlyaSulimenko/Todos-check">Source</a>
+
     <script src="todo-app.js"></script>
   </body>
 </html>
